Preparing ASP.NET Core Backend for Push Notifications

--- a/Demo.AspNetCore.Angular.PushNotifications/appsettings.json
+++ b/Demo.AspNetCore.Angular.PushNotifications/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PushNotifications": {
+    "PublicKey": "BMBuVtMBpcgwRtUNttNj2yXP3PGCSrf_fT94pCb1Bdl1JDnH8_CSK0GXqa8hOAkLq1EYnTH__zaXhy5jLoJ4s2A",
+    "PrivateKey": "6GJW3jlOQonru2IsakRLpqj2d6qURK2C9GCZSlYwKq8"
+  }
 }
