--- a/Demo.AspNetCore.Angular.PushNotifications/Demo.AspNetCore.Angular.PushNotifications.csproj
+++ b/Demo.AspNetCore.Angular.PushNotifications/Demo.AspNetCore.Angular.PushNotifications.csproj
@@ -13,8 +13,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lib.Net.Http.WebPush" Version="2.0.0" />
+    <PackageReference Include="LiteDB" Version="4.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
